--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,7 +36,7 @@ jobs:
         if: matrix.rust == 'nightly'
       - run: cargo test
       - run: cargo test --features small
-      - run: cargo build --tests --features no-panic --release
+      - run: cargo build --tests --release
         if: matrix.rust == 'nightly'
       - uses: actions/upload-artifact@v4
         if: matrix.rust == 'nightly' && always()
