--- a/fuzz/Cargo.toml
+++ b/fuzz/Cargo.toml
@@ -1,25 +1,25 @@
+[workspace]
+
 [package]
-name = "ryu-fuzz"
+name = "ryuu-fuzz"
 version = "0.0.0"
 authors = ["David Tolnay <dtolnay@gmail.com>"]
-edition = "2018"
+edition = "2021"
 publish = false
 
 [package.metadata]
 cargo-fuzz = true
 
-[dependencies]
-arbitrary = { version = "1", features = ["derive"] }
-libfuzzer-sys = "0.4"
-ryu = { path = ".." }
-
-[features]
-small = ["ryu/small"]
-
 [[bin]]
-name = "fuzz_ryu"
-path = "fuzz_targets/fuzz_ryu.rs"
+name = "fuzz_ryuu"
+path = "fuzz_targets/fuzz_ryuu.rs"
 test = false
 doc = false
 
-[workspace]
+[dependencies]
+arbitrary = { version = "1", features = ["derive"] }
+libfuzzer-sys = "0.4"
+ryuu = { path = ".." }
+
+[features]
+small = ["ryuu/small"]
